QA round: chunk-aware reader, allocation history discard, safepoint operations, filter-after-resolution locks, CLI hardening, docs, CI, AGPL-3.0