@@ -1,6 +1,7 @@
 package dev.jfrq.core.alloc;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Path;
@@ -21,14 +22,37 @@ class AllocationTest {
     static final Stack SITE_B = new Stack(List.of(new Frame("dev.app.B", "alloc", 2, "JIT compiled")), false);
 
     static RecordingInfo info(String name, long seconds) {
-        return new RecordingInfo(Path.of(name), new Interval(0, seconds * S), Map.of(), Map.of(), Set.of());
+        return new RecordingInfo(Path.of(name), new Interval(0, seconds * S), 1, Map.of(), Map.of(), Set.of(), List.of());
     }
 
     static AllocationReport report(String name, long seconds, Map<String, Long> byThread, Map<String, Long> byClass,
                                    Map<Stack, Long> bySite) {
         long total = byThread.values().stream().mapToLong(Long::longValue).sum();
-        return new AllocationReport(info(name, seconds), "jdk.ObjectAllocationSample", total, 100, byThread, byClass,
+        return new AllocationReport(info(name, seconds), "jdk.ObjectAllocationSample", total, 100, 100, Map.of(), byThread, byClass,
                 bySite, Map.of("worker", byClass), Map.of("worker", bySite));
+    }
+
+    @Test
+    void estimateIsMeasuredAgainstTheJvmCounters() {
+        AllocationReport none = report("a.jfr", 1, Map.of("worker", 1000L), Map.of("[B", 1000L), Map.of());
+        assertFalse(none.hasCounters());
+        assertEquals(0.0, none.estimateError(), 0.0);
+        assertTrue(none.counted("worker").isEmpty());
+        // Only the counted threads take part in the comparison: the short-lived one is not held against it.
+        AllocationReport some = new AllocationReport(info("a.jfr", 1), "jdk.ObjectAllocationSample", 1570, 100, 100,
+                Map.of("worker", 1000L), Map.of("worker", 1070L, "short-lived", 500L), Map.of(), Map.of(), Map.of(), Map.of());
+        assertTrue(some.hasCounters());
+        assertEquals(1000, some.countedBytes());
+        assertEquals(1070, some.estimatedOnCountedThreads());
+        assertEquals(0.07, some.estimateError(), 1e-9);
+        assertTrue(some.estimateErrorMaterial());
+        assertEquals(1000L, some.counted("worker").orElseThrow());
+        assertTrue(some.counted("short-lived").isEmpty());
+        // A counter on a thread that barely allocates says nothing about the estimate.
+        AllocationReport noise = new AllocationReport(info("a.jfr", 1), "jdk.ObjectAllocationSample", 1_000_000, 100, 100,
+                Map.of("main", 20L), Map.of("main", 480L, "worker", 999_520L), Map.of(), Map.of(), Map.of(), Map.of());
+        assertTrue(noise.hasCounters());
+        assertFalse(noise.estimateErrorMaterial());
     }
 
     @Test
@@ -41,14 +65,14 @@ class AllocationTest {
         assertEquals(100.0, r.rate());
         assertEquals(10.0, r.seconds());
         List<AllocationReport.Row<String>> threads = r.threads(10);
-        assertEquals("worker", threads.get(0).key());
-        assertEquals(0.8, threads.get(0).share(), 1e-9);
-        assertEquals(800, threads.get(0).bytes());
+        assertEquals("worker", threads.getFirst().key());
+        assertEquals(0.8, threads.getFirst().share(), 1e-9);
+        assertEquals(800, threads.getFirst().bytes());
         assertEquals(1, r.threads(1).size());
-        assertEquals("[B", r.classes(10).get(0).key());
-        assertEquals(SITE_A, r.sites(10).get(0).key());
-        assertEquals(SITE_A, r.sitesOf("worker", 1).get(0).key());
-        assertEquals("[B", r.classesOf("worker", 1).get(0).key());
+        assertEquals("[B", r.classes(10).getFirst().key());
+        assertEquals(SITE_A, r.sites(10).getFirst().key());
+        assertEquals(SITE_A, r.sitesOf("worker", 1).getFirst().key());
+        assertEquals("[B", r.classesOf("worker", 1).getFirst().key());
         assertTrue(r.classesOf("nobody", 5).isEmpty());
         assertTrue(r.sitesOf("nobody", 5).isEmpty());
     }
@@ -90,8 +114,8 @@ class AllocationTest {
         assertEquals(-1.0, gone.ratio(), 1e-9);
         assertEquals(2, diff.threads(2).size());
 
-        assertEquals("[B", diff.classes(10).get(0).key());
-        assertEquals(SITE_A, diff.sites(10).get(0).key());
+        assertEquals("[B", diff.classes(10).getFirst().key());
+        assertEquals(SITE_A, diff.sites(10).getFirst().key());
         assertEquals(0.0, new AllocationDiff.Delta<>("x", 0.0, 0.0).ratio());
         assertEquals(before, diff.baseline());
         assertEquals(after, diff.current());
